got a lot done with images loading need to fix still main image stuck on first image

--- a/client/compile/Overview/overview.scss
+++ b/client/compile/Overview/overview.scss
@@ -7,6 +7,41 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+
+
+.grid-ct{
+  width: 100%;
+  max-height: 400px;
+  display: grid;
+  grid-template-columns: 100px 100px 100px 100px;
+  overflow: scroll;
+  gap: 20px;
+  .style{
+    width:100px; height:100px;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap:nowrap;
+    cursor: grab;
+    box-sizing: border-box;
+    &:hover{
+      img {border:5px solid purple;}
+    }
+    img{
+      width:100%;
+      height:100%;
+      border:1px solid transparent;
+      border-radius:55px;
+      box-sizing: border-box;
+      display: flex;
+      flex-wrap: nowrap;
+      justify-content: center;
+
+    }
+  }
+}
+
+
   .imageSelector {
     position: absolute;
     width:80px;
