--- a/client/compile/Overview/rightContainer/rightcontainer.scss
+++ b/client/compile/Overview/rightContainer/rightcontainer.scss
@@ -12,9 +12,11 @@
     }
   }
   .style-selectors{
+    background:white;
     width:100%;
     height:30%;
-    background:aqua;
+    border:3px solid black;
+
   }
   .option-selectors{
     width:100%;
@@ -38,8 +40,10 @@
 
   }
   .price{
-    display:block;
-    font-size:20px;
-    color:red;
+    display: block;
+    font-size: 20px;
+    color: #0075ff;
+    font-size: 41px;
+
   }
 }
